<resources>
    <string name="app_name">WeatherApp</string>
    <string name="drawer_header_tv">WeatherApp by Andrej Vukelić</string>
    <string name="add_location">Add location</string>
    <string name="placeholder_new_location_input">Enter a city name</string>
    <string name="add_new_location">Add new location</string>
    <string name="error_location_not_exist">Location does not exist</string>
    <string name="error_location_already_on_list">You already have this location on list</string>
    <string name="error_empty_input_field">Location should not be empty</string>
    <string name="location_added_success_toast_message">Location added successfully!</string>
    <string name="remove_location">Remove location</string>
    <string name="sub_menu_title">Locations</string>
    <string name="no_internet_connection_message">You have no internet connection</string>

    <string name="weather_time_hint">Fri, October 04</string>
    <string name="weather_temperature_hint">26°</string>
    <string name="weather_wind_speed_hint">Wind 24.5 km/h</string>
    <string name="weather_pressure_hint">1024.00 hpa</string>
    <string name="weather_humidity_hint">80%</string>
    <string name="weather_time">%1$s</string>
    <string name="weather_temperature">%1$s°</string>
    <string name="weather_wind_speed">Wind %1$.1f km/h</string>
    <string name="weather_pressure">%1$.2f hpa</string>
    <string name="weather_humidity">%1$d%% humidity</string>
    <string name="weather_description_hint">Scattered clouds</string>
    <string name="weather_main_hint">Clear</string>
    <string name="weather_fragment_loading_failure_toast_message">Could not load weather data, please refresh.</string>
    <string name="search_title">Search</string>
    <string name="location_map_search">Search on map</string>
    <string name="search_hint">Search</string>
    <string name="refresh_title">refresh</string>
    <string name="weather_city_hint">Osijek</string>
    <string name="title_activity_maps">Map</string>
</resources>
