<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/forecast_weather_list_item_image_image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/forecast_weather_list_item_details_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/forecast_weather_list_item_time_text_view"
        app:layout_constraintBottom_toBottomOf="@id/forecast_weather_list_item_image_image_view"
        app:layout_constraintLeft_toRightOf="@id/forecast_weather_list_item_image_image_view"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/forecast_weather_list_item_temperature_text_view"
            style="@style/futureWeatherItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weather_temperature_hint"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/forecast_weather_list_item_main_text_view"
            style="@style/futureWeatherItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weather_main_hint"
            app:layout_constraintLeft_toRightOf="@id/forecast_weather_list_item_temperature_text_view"
            app:layout_constraintRight_toLeftOf="@id/forecast_weather_list_item_humidity_text_view" />

        <TextView
            android:id="@+id/forecast_weather_list_item_humidity_text_view"
            style="@style/futureWeatherItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weather_humidity_hint"
            app:layout_constraintLeft_toRightOf="@id/forecast_weather_list_item_main_text_view"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/forecast_weather_list_item_time_text_view"
        style="@style/futureWeatherItemDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/weather_time_hint"
        app:layout_constraintBottom_toTopOf="@id/forecast_weather_list_item_details_container"
        app:layout_constraintLeft_toRightOf="@id/forecast_weather_list_item_image_image_view"
        app:layout_constraintTop_toTopOf="@id/forecast_weather_list_item_image_image_view" />
</android.support.constraint.ConstraintLayout>