<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.weather.WeatherFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/weather_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimary">
        <ProgressBar
            android:id="@+id/weather_fragment_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:progressTint="@color/white"/>

        <ImageView
            android:id="@+id/weather_fragment_refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/weather_fragment_weather_details_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintRight_toLeftOf="@id/weather_fragment_image_container"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible">

            <TextView
                android:id="@+id/weather_fragment_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/weather_time_hint"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/weather_fragment_temperature_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/weather_temperature_hint"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/weather_fragment_wind_speed_text_view"
                    style="@style/WeatherTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weather_wind_speed_hint"
                    app:layout_constraintBottom_toTopOf="@id/weather_fragment_pressure_text_view" />

                <TextView
                    android:id="@+id/weather_fragment_pressure_text_view"
                    style="@style/WeatherTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weather_pressure_hint"
                    app:layout_constraintTop_toBottomOf="@id/weather_fragment_wind_speed_text_view" />

                <TextView
                    android:id="@+id/weather_fragment_humidity_text_view"
                    style="@style/WeatherTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weather_humidity_hint"
                    app:layout_constraintTop_toBottomOf="@id/weather_fragment_pressure_text_view" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/weather_fragment_image_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/weather_fragment_weather_details_container"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible">
            <TextView
                android:id="@+id/weather_fragment_city_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weather_city_hint"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/weather_fragment_weather_image_view"/>

            <ImageView
                android:id="@+id/weather_fragment_weather_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/weather_fragment_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weather_description_hint"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_fragment_weather_image_view"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/weather_fragment_forecast_weather_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>